# verilyze

./: .checkov.yaml  .codespellrc  .commitlintrc.json  .cursorignore  .dockerignore  .gitignore  .gitleaks.toml  .hadolint.yaml  .jscpd.json  .yamllint  AGENTS.md  CHANGELOG.md  COMPLIANCE.md  CONTRIBUTING.md  Cargo.toml  INSTALL.md  LICENSE  Makefile  README.md  REUSE.toml  SECURITY.md  THIRD-PARTY-LICENSES  about.hbs  about.toml  biome.json  deny.toml  package-lock.json  package.json  pylock.dev.toml  pyproject.toml  renovate.json  rust-toolchain.toml  rustfmt.toml  trivy.yaml  verilyze.conf.example
.cursor/: hooks.json
architecture/: PRD.md  config-precedence.mmd  execution-flow.mmd  execution-flow.mmd.license  plugin-registration-flow.mmd  provider-auth-flow.mmd  simplified-scan.mmd  trait-data-flow.mmd  workspace-layout.mmd
completions/: .shellcheckrc  _vlz  vlz.bash  vlz.fish
crates/core/vlz/: Cargo.toml  build.rs
crates/core/vlz-db/: Cargo.toml
crates/core/vlz-db/src/: lib.rs
crates/core/vlz-integrity/: Cargo.toml
crates/core/vlz-integrity/src/: lib.rs
crates/core/vlz-manifest-finder/: Cargo.toml
crates/core/vlz-manifest-finder/src/: lib.rs
crates/core/vlz-manifest-parser/: Cargo.toml
crates/core/vlz-manifest-parser/src/: declarations.rs  lib.rs  line_scan.rs
crates/core/vlz-plugin-macro/: Cargo.toml
crates/core/vlz-plugin-macro/src/: lib.rs
crates/core/vlz-reachability/: Cargo.toml
crates/core/vlz-reachability-trait/: Cargo.toml
crates/core/vlz-reachability-trait/src/: evidence_match.rs  lib.rs
crates/core/vlz-reachability/src/: lib.rs
crates/core/vlz-report/: Cargo.toml
crates/core/vlz-report/src/: lib.rs
crates/core/vlz/src/: benchmark_metrics.rs  cache_warm.rs  cli.rs  cli_values.rs  completion.rs  config.rs  config_example.rs  exit_code.rs  lib.rs  main.rs  mocks.rs  package_resolve.rs  registry.rs  run.rs  scan.rs
crates/core/vlz/tests/: cli.rs  config_integration.rs  error_exit.rs  exit_code_matrix.rs  minimal_features.rs  run_inprocess.rs
crates/core/vlz/tests/support/: mod.rs
crates/db-backends/vlz-db-redb/: Cargo.toml
crates/db-backends/vlz-db-redb/src/: lib.rs
crates/db-backends/vlz-db-redb/tests/: integration.rs
crates/languages/vlz-go/: Cargo.toml
crates/languages/vlz-go/src/: finder.rs  lib.rs  parser.rs  reachability.rs  resolver.rs
crates/languages/vlz-go/tests/: finder_integration.rs  parser_integration.rs  resolver_integration.rs
crates/languages/vlz-python/: Cargo.toml
crates/languages/vlz-python/src/: finder.rs  lib.rs  lock_names.rs  reachability.rs  tier_d.rs
crates/languages/vlz-python/src/parser/: decl_spans.rs  lockfile.rs  mod.rs  pep508.rs  pipfile.rs  pyproject.rs  requirements.rs  setup_cfg.rs  setup_py.rs
crates/languages/vlz-python/src/resolver/: ephemeral_venv.rs  lock_discovery.rs  lock_parser.rs  manifest_cache_key.rs  manifest_dir.rs  mod.rs  pip_freeze.rs  pip_lock.rs  pip_venv.rs  pip_version.rs  test_fixtures.rs
crates/languages/vlz-python/tests/: finder_integration.rs  parser_integration.rs  resolver_integration.rs
crates/languages/vlz-python/tests/fixtures/setup_py/: binop_list_concat.expected.toml  binop_list_concat.py  classic_import_setup.expected.toml  classic_import_setup.py  dynamic_only.py  extras_and_tests.expected.toml  extras_and_tests.py  module_level_constants.expected.toml  module_level_constants.py  no_setup_call.expected.toml  no_setup_call.py  setuptools_module_call.expected.toml  setuptools_module_call.py  syntax_error.py
crates/languages/vlz-rust/: Cargo.toml
crates/languages/vlz-rust/src/: cargo_metadata.rs  finder.rs  lib.rs  parser.rs  reachability.rs  resolver.rs
crates/languages/vlz-rust/tests/: finder_integration.rs  parser_integration.rs  resolver_integration.rs
docs/: FAQ.md  LICENSING.md  NONTRIVIAL-CHANGE.md  configuration.md  configuration.md.in
examples/: README.md  github-action-vlz-scan.yml
man/: verilyze.conf.5  verilyze.conf.5.in  vlz.1
schemas/: README.md
scripts/: __init__.py  benchmark-gate.sh  check-dco.sh  check-obs-packaging.sh  check-obs-signing.sh  check-pylock-dev.sh  check-report-schema.sh  coverage.sh  (+71 more)
spd/: Cargo.toml
spd-db/: Cargo.toml
spd-db-redb/: Cargo.toml
spd-db-redb/src/: lib.rs
spd-db-redb/tests/: integration.rs
spd-db/src/: lib.rs
spd-integrity/: Cargo.toml
spd-integrity/src/: lib.rs
spd-manifest-finder/: Cargo.toml
spd-manifest-finder/src/: lib.rs
spd-manifest-parser/: Cargo.toml
spd-manifest-parser/src/: lib.rs
spd-python/: Cargo.toml
spd-python/src/: finder.rs  lib.rs  parser.rs  resolver.rs
spd-python/src/parser/: mod.rs  pipfile.rs  pyproject.rs  requirements.rs  setup_cfg.rs
spd-python/src/resolver/: lock_discovery.rs  lock_parser.rs  mod.rs
spd-python/tests/: finder_integration.rs  parser_integration.rs
spd-report/: Cargo.toml
spd-report/src/: lib.rs
spd/src/: cli.rs  config.rs  lib.rs  main.rs  mocks.rs  registry.rs  run.rs
spd/tests/: cli.rs  config_integration.rs  run_inprocess.rs
tests/fuzz/: Cargo.toml
tests/fuzz/corpus/cargo_lock/: simple
tests/fuzz/corpus/cargo_metadata/: simple
tests/fuzz/corpus/cargo_toml/: simple
tests/fuzz/corpus/config_toml/: valid_full  valid_minimal
tests/fuzz/corpus/go_mod/: simple
tests/fuzz/corpus/pipfile/: simple
tests/fuzz/corpus/poetry_lock/: simple
tests/fuzz/corpus/pylock_toml/: simple
tests/fuzz/corpus/pyproject_toml/: simple
tests/fuzz/corpus/requirements_txt/: with_comments
tests/fuzz/corpus/setup_cfg/: simple
tests/fuzz/corpus/setup_py/: classic_import_setup
tests/fuzz/fuzz_targets/: cargo_lock.rs  cargo_metadata.rs  cargo_toml.rs  config_toml.rs  go_mod.rs  parse_config_set_arg.rs  pip_freeze.rs  pipfile.rs  poetry_lock.rs  pylock_toml.rs  pyproject_toml.rs  requirements_txt.rs  setup_cfg.rs  setup_py.rs
vlz/: Cargo.toml
vlz-db-redb/: Cargo.toml
vlz-db-redb/src/: lib.rs
vlz-db-redb/tests/: integration.rs
vlz-integrity/: Cargo.toml
vlz-manifest-finder/: Cargo.toml
vlz/src/: cli.rs  config.rs  lib.rs  main.rs  run.rs
vlz/tests/: cli.rs  error_exit.rs  run_inprocess.rs
(+197 files in other folders)
