# SPDX-FileCopyrightText: 2026 Travis Post <post.travis@gmail.com>
#
# SPDX-License-Identifier: GPL-3.0-or-later

# ------------------------------------------------------------
# verilyze -- workspace root
# ------------------------------------------------------------
[workspace]
members = [
    "vlz",                     # core binary
    "tests/fuzz",              # AFL fuzz targets (NFR-020); build with cargo afl build
    "vlz-db",                  # trait definitions
    "vlz-db-redb",             # default RedB backend (this crate)
    "vlz-python",              # Python language plugin
    "vlz-manifest-finder",
    "vlz-manifest-parser",
    "vlz-cve-client",
    "vlz-cve-provider-nvd",    # NVD CVE provider (optional, nvd feature)
    "vlz-cve-provider-github", # GitHub Advisory CVE provider (optional, github feature)
    "vlz-cve-provider-sonatype", # Sonatype OSS Index CVE provider (optional, sonatype feature)
    "vlz-report",
    "vlz-integrity",
    "vlz-plugin-macro"          # procedural macro for plugin registration
]
# Exclude fuzz crate from default build; it requires `cargo afl build` (AFL++).
default-members = ["vlz", "vlz-db", "vlz-db-redb", "vlz-python", "vlz-manifest-finder",
    "vlz-manifest-parser", "vlz-cve-client", "vlz-report", "vlz-integrity",
    "vlz-plugin-macro"]

# Enforce a single Rust edition for all members
resolver = "2"

# panic=unwind for dev: required by fuzz targets so thread panics are isolated (SEC-017).
# Non-root packages inherit workspace profile; fuzz script builds with profile.dev.
[profile.dev]
panic = "unwind"

# ----------------------------------------------------------------
# Shared workspace-wide metadata (optional but useful)
# ----------------------------------------------------------------
[workspace.package]
edition = "2024"
license = "GPL-3.0-or-later"
repository = "https://github.com/your-org/verilyze"
homepage = "https://github.com/your-org/verilyze"
authors = ["Your Name <you@example.com>"]
description = "verilyze -- fast, modular Software Composition Analysis tool"
keywords = ["sca", "supply‑chain", "rust", "cve", "sbom"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"
