# SPDX-FileCopyrightText: 2026 Travis Post <post.travis+git@gmail.com>
#
# SPDX-License-Identifier: GPL-3.0-or-later

# ------------------------------------------------------------
# verilyze -- workspace root
# ------------------------------------------------------------
[workspace]
members = [
    "crates/core/*",
    "crates/languages/*",
    "crates/providers/*",
    "crates/db-backends/*",
    "tests/fuzz",              # AFL fuzz targets (NFR-020); build with cargo afl build
]
# Exclude fuzz crate from default build; it requires `cargo afl build` (AFL++).
default-members = [
    "crates/core/vlz",
    "crates/core/vlz-db",
    "crates/db-backends/vlz-db-redb",
    "crates/languages/vlz-python",
    "crates/languages/vlz-rust",
    "crates/core/vlz-manifest-finder",
    "crates/core/vlz-manifest-parser",
    "crates/core/vlz-cve-client",
    "crates/core/vlz-report",
    "crates/core/vlz-integrity",
    "crates/core/vlz-plugin-macro",
]

# Enforce a single Rust edition for all members
resolver = "2"

# panic=unwind for dev: required by fuzz targets so thread panics are isolated (SEC-017).
# Non-root packages inherit workspace profile; fuzz script builds with profile.dev.
[profile.dev]
panic = "unwind"

# Release profile: strip symbols for security and smaller binary (NFR-023).
[profile.release]
strip = true

# ----------------------------------------------------------------
# Shared workspace-wide metadata (optional but useful)
# ----------------------------------------------------------------
[workspace.package]
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"
repository = "https://github.com/tpost/verilyze"
homepage = "https://github.com/tpost/verilyze"
authors = ["Travis Post"]
description = "verilyze -- fast, modular Software Composition Analysis tool"
keywords = ["cve", "sbom", "sca", "security", "supply‑chain"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"
