# SPDX-FileCopyrightText: 2026 Travis Post <post.travis@gmail.com>
#
# SPDX-License-Identifier: GPL-3.0-or-later

[project]
name = "super-duper"
version = "0.0.0"
description = "CVE scanner (Python scripts are auxiliary tooling)"
requires-python = ">=3.11"

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-cov>=4"]

[tool.pytest.ini_options]
testpaths = ["tests/scripts"]
addopts = "-v"

[tool.spd-headers]
default_copyright = "The super-duper contributors"
default_license = "GPL-3.0-or-later"
nontrivial_lines = 15
extensions = ["py", "rs", "toml", "md", "mmd", "sh", "json"]
literal_names = ["Makefile"]
exclude_paths = ["Cargo.lock", "package-lock.json"]

[tool.black]
line-length = 79
target-version = ["py311"]
include = "scripts/.*\\.py"

[tool.pylint.main]
max-line-length = 79

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
