# SPDX-FileCopyrightText: 2026 Travis Post <post.travis@gmail.com>
#
# SPDX-License-Identifier: GPL-3.0-or-later

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "verilyze"
version = "0.0.0"
description = "CVE scanner (Python scripts are auxiliary tooling)"
requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "black>=26.5.1",
    "pylint>=4.0.5",
    "mypy>=2.1.0",
    "bandit>=1.9.4",
]

[tool.setuptools]
packages = []

[tool.pytest.ini_options]
testpaths = ["tests/scripts"]
addopts = "-v"

[tool.vlz-headers]
default_copyright = "The verilyze contributors"
default_license = "GPL-3.0-or-later"
# Emails containing any of these substrings (case-insensitive) are not SPDX holders.
bot_email_markers = ["[bot]"]
nontrivial_lines = 15
extensions = ["py", "rs", "toml", "md", "mmd", "sh", "json", "yml", "yaml"]
literal_names = ["Makefile"]
exclude_paths = ["Cargo.lock"]

[tool.verilyze]
line-length = 79

[tool.black]
line-length = 79
target-version = ["py311"]
include = "scripts/.*\\.py"

[tool.pylint.main]
max-line-length = 79

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
