# SPDX-FileCopyrightText: 2026 Travis Post <post.travis@gmail.com>
#
# SPDX-License-Identifier: GPL-3.0-or-later

[package]
name = "spd-db-redb"
version = "1.0.0"
edition = "2024"
license = "GPL-3.0-or-later"
description = "RedB‑backed implementation of the DatabaseBackend trait"
publish = false

[dependencies]
async-trait = "0.1"
redb = "1"
spd-cve-client = { path = "../spd-cve-client" }
spd-db = { path = "../spd-db" }
sha2 = "0.10"          # for SEC‑004 integrity verification
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"     # for serialising cache entries to table values

[dev-dependencies]
spd-db = { path = "../spd-db" }
tempfile = "3"
tokio = { version = "1", features = ["rt", "macros"] }
