[package]
name = "spd-manifest-finder"
version = "1.0.0"
edition = "2024"
license = "GPL-3.0-or-later"
description = "Trait and stub implementations for discovering manifest files"
publish = false

[dependencies]
async-trait = "0.1"
thiserror = "2.0"
regex = "1"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
