# SPDX-FileCopyrightText: 2026 Travis Post <post.travis@gmail.com>
#
# SPDX-License-Identifier: GPL-3.0-or-later

[package]
name = "spd-python"
version = "1.0.0"
edition = "2024"
license = "GPL-3.0-or-later"
description = "Python language plugin for super-duper (manifest finder, parser, resolver)"
publish = false

[dependencies]
async-trait = "0.1"
thiserror = "2.0"
regex = "1"
spd-db = { path = "../spd-db" }
spd-manifest-finder = { path = "../spd-manifest-finder" }
spd-manifest-parser = { path = "../spd-manifest-parser" }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
