[package]
name = "spd-report"
version = "1.0.0"
edition = "2024"
license = "GPL-3.0-or-later"
description = "Reporting trait – renders JSON, SARIF, HTML, etc."
publish = false

[dependencies]
async-trait = "0.1"
thiserror = "2.0"
spd-db = { path = "../spd-db" }   # re‑uses Package & CveRecord structs
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
