# SPDX-FileCopyrightText: 2026 Travis Post <post.travis@gmail.com>
#
# SPDX-License-Identifier: GPL-3.0-or-later

[package]
name = "spd"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"
description = "Super Duper - fast, modular SCA command-line tool"
publish = false               # internal binary, not published to crates.io

[lib]
name = "spd"
path = "src/lib.rs"

[[bin]]
name = "spd"
path = "src/main.rs"

[dependencies]
# Core utilities
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.38", features = ["full"] }
log = "0.4"
env_logger = "0.11"
anyhow = "1.0"
toml = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"

# Workspace‑internal trait crates
spd-db = { path = "../spd-db" }
spd-manifest-finder = { path = "../spd-manifest-finder" }
spd-manifest-parser = { path = "../spd-manifest-parser" }
spd-python = { path = "../spd-python", optional = true }
spd-cve-client = { path = "../spd-cve-client" }
spd-report = { path = "../spd-report" }
spd-integrity = { path = "../spd-integrity" }

# Default database implementation (feature‑gated)
spd-db-redb = { path = "../spd-db-redb", optional = true }

# Macro for plugin registration (used in registry.rs)
spd-plugin-macro = { path = "../spd-plugin-macro" }

[dev-dependencies]
tempfile = "3"
temp-env = "0.3"

# Feature gating – matches MOD‑003
[features]
default = ["redb", "python"]
redb = ["spd-db-redb"]
python = ["spd-python"]
sqlite = []      # placeholder for a future SQLite backend
mem = []         # placeholder for an in‑memory/mock backend
