# SPDX-FileCopyrightText: 2026 Travis Post <post.travis+git@gmail.com>
#
# SPDX-License-Identifier: GPL-3.0-or-later

[package]
name = "vlz-integrity"
version = "1.0.0"
edition = "2024"
license = "GPL-3.0-or-later"
description = "Optional integrity‑checking plug‑ins (SHA‑256, FIPS‑204, …)"
publish = false

[dependencies]
async-trait = "0.1"
thiserror = "2.0"
vlz-db = { path = "../vlz-db" }   # uses DatabaseBackend trait
sha2 = "0.10"                    # SHA‑256 implementation (default)

[dev-dependencies]
serde_json = "1.0"
tokio = { version = "1", features = ["rt", "macros"] }
