# SPDX-FileCopyrightText: 2026 Travis Post <post.travis@gmail.com>
#
# SPDX-License-Identifier: GPL-3.0-or-later

[package]
name = "spd-fuzz"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
afl = "0.17"
spd = { path = "../../spd" }
spd-python = { path = "../../spd-python" }

[[bin]]
name = "fuzz_config_toml"
path = "fuzz_targets/config_toml.rs"

[[bin]]
name = "fuzz_requirements_txt"
path = "fuzz_targets/requirements_txt.rs"

[[bin]]
name = "fuzz_parse_config_set_arg"
path = "fuzz_targets/parse_config_set_arg.rs"
