# SPDX-FileCopyrightText: 2026 Travis Post <post.travis@gmail.com>
#
# SPDX-License-Identifier: GPL-3.0-or-later

[package]
name = "vlz-fuzz"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
afl = "0.17"
vlz = { path = "../../crates/core/vlz" }
vlz-python = { path = "../../crates/languages/vlz-python" }
vlz-rust = { path = "../../crates/languages/vlz-rust" }
vlz-go = { path = "../../crates/languages/vlz-go" }

[[bin]]
name = "fuzz_config_toml"
path = "fuzz_targets/config_toml.rs"

[[bin]]
name = "fuzz_requirements_txt"
path = "fuzz_targets/requirements_txt.rs"

[[bin]]
name = "fuzz_parse_config_set_arg"
path = "fuzz_targets/parse_config_set_arg.rs"

[[bin]]
name = "fuzz_pyproject_toml"
path = "fuzz_targets/pyproject_toml.rs"

[[bin]]
name = "fuzz_pipfile"
path = "fuzz_targets/pipfile.rs"

[[bin]]
name = "fuzz_pylock_toml"
path = "fuzz_targets/pylock_toml.rs"

[[bin]]
name = "fuzz_poetry_lock"
path = "fuzz_targets/poetry_lock.rs"

[[bin]]
name = "fuzz_setup_cfg"
path = "fuzz_targets/setup_cfg.rs"

[[bin]]
name = "fuzz_cargo_toml"
path = "fuzz_targets/cargo_toml.rs"

[[bin]]
name = "fuzz_cargo_lock"
path = "fuzz_targets/cargo_lock.rs"

[[bin]]
name = "fuzz_go_mod"
path = "fuzz_targets/go_mod.rs"
