# SPDX-FileCopyrightText: 2026 Travis Post <post.travis@gmail.com>
#
# SPDX-License-Identifier: GPL-3.0-or-later

[package]
name = "vlz-integrity"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Optional integrity‑checking plug‑ins (SHA‑256, FIPS‑204, …)"
publish = false

[dependencies]
async-trait.workspace = true
thiserror.workspace = true
vlz-db = { path = "../vlz-db" }   # uses DatabaseBackend trait
sha2.workspace = true                    # SHA‑256 implementation (default)

[dev-dependencies]
serde_json.workspace = true
tokio = { workspace = true, features = ["rt", "macros"] }
