# SPDX-FileCopyrightText: 2026 Travis Post <post.travis@gmail.com>
#
# SPDX-License-Identifier: GPL-3.0-or-later

[package]
name = "vlz-manifest-finder"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Trait and stub implementations for discovering manifest files"
publish = false

[dependencies]
async-trait.workspace = true
thiserror.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
