# SPDX-FileCopyrightText: 2026 Travis Post <post.travis@gmail.com>
#
# SPDX-License-Identifier: GPL-3.0-or-later

[package]
name = "vlz-manifest-parser"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Trait for parsing manifests into a dependency graph"
publish = false

[dependencies]
async-trait.workspace = true
thiserror.workspace = true
vlz-db = { path = "../vlz-db" }   # re‑uses the Package struct

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
