# SPDX-FileCopyrightText: 2026 Travis Post <post.travis@gmail.com>
#
# SPDX-License-Identifier: GPL-3.0-or-later

[package]
name = "vlz-plugin-macro"
version = "1.0.0"
edition = "2024"
license = "GPL-3.0-or-later"
description = "Procedural macro used by plug‑in crates to register themselves"
publish = false

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
