# SPDX-FileCopyrightText: 2026 Travis Post <post.travis@gmail.com>
#
# SPDX-License-Identifier: GPL-3.0-or-later

[package]
name = "vlz-reachability-trait"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Trait contracts and shared types for Tier B reachability analyzers"
publish = false

[dependencies]
vlz-db = { path = "../vlz-db" }

[features]
perf-instrumentation = []
