# SPDX-FileCopyrightText: 2026 Travis Post <post.travis@gmail.com>
#
# SPDX-License-Identifier: GPL-3.0-or-later

[package]
name = "vlz-reachability"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Tier B import-based reachability hints for verilyze (FR-032)"
publish = false

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
vlz-db = { path = "../vlz-db" }
vlz-reachability-trait = { path = "../vlz-reachability-trait" }

[features]
perf-instrumentation = ["vlz-reachability-trait/perf-instrumentation"]

[dev-dependencies]
temp-env.workspace = true
tempfile.workspace = true
