# SPDX-FileCopyrightText: 2026 Travis Post <post.travis@gmail.com>
#
# SPDX-License-Identifier: GPL-3.0-or-later

[package]
name = "vlz-report"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Reporting trait – renders JSON, SARIF, HTML, etc."
publish = false

[dependencies]
async-trait.workspace = true
thiserror.workspace = true
vlz-db = { path = "../vlz-db" }   # re‑uses Package & CveRecord structs
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
