# SPDX-FileCopyrightText: 2026 Travis Post <post.travis+git@gmail.com>
#
# SPDX-License-Identifier: GPL-3.0-or-later

[package]
name = "vlz"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "verilyze - fast, modular SCA command-line tool"
publish = false               # internal binary, not published to crates.io

[lib]
name = "vlz"
path = "src/lib.rs"

[[bin]]
name = "vlz"
path = "src/main.rs"

[dependencies]
# Core utilities
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.38", features = ["full"] }
log = "0.4"
env_logger = "0.11"
anyhow = "1.0"
futures = "0.3"
toml = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"

# Workspace‑internal trait crates (core siblings)
vlz-db = { path = "../vlz-db" }
vlz-manifest-finder = { path = "../vlz-manifest-finder" }
vlz-manifest-parser = { path = "../vlz-manifest-parser" }
vlz-cve-client = { path = "../vlz-cve-client" }
vlz-report = { path = "../vlz-report" }
vlz-integrity = { path = "../vlz-integrity" }
vlz-plugin-macro = { path = "../vlz-plugin-macro" }

# Language plugins
vlz-python = { path = "../../languages/vlz-python", optional = true }
vlz-rust = { path = "../../languages/vlz-rust", optional = true }

# CVE providers (optional)
vlz-cve-provider-nvd = { path = "../../providers/vlz-cve-provider-nvd", optional = true }
vlz-cve-provider-github = { path = "../../providers/vlz-cve-provider-github", optional = true }
vlz-cve-provider-sonatype = { path = "../../providers/vlz-cve-provider-sonatype", optional = true }

# Default database implementation (feature‑gated)
vlz-db-redb = { path = "../../db-backends/vlz-db-redb", optional = true }

# For mock implementations (feature = "testing")
async-trait = { version = "0.1", optional = true }

# Secure temp file/dir creation (SEC-013, FR-023)
tempfile = "3"

[build-dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "1.0"

[dev-dependencies]
temp-env = "0.3"

# Feature gating – matches MOD‑003
[features]
default = ["redb", "python", "rust", "testing"]
redb = ["vlz-db-redb"]
python = ["vlz-python"]
rust = ["vlz-rust"]
nvd = ["dep:vlz-cve-provider-nvd"]
github = ["dep:vlz-cve-provider-github"]
sonatype = ["dep:vlz-cve-provider-sonatype"]
# Mocks and registry clear helpers for integration tests (integration tests
# build vlz as a dep, so cfg(test) is false; this feature enables them).
testing = ["async-trait"]
sqlite = []      # placeholder for a future SQLite backend
mem = []         # placeholder for an in‑memory/mock backend

# ---- Packaging metadata (OP-013) ----

[package.metadata.deb]
maintainer = "Travis Post <post.travis+git@gmail.com>"
depends = "$auto"
section = "utils"
priority = "optional"
conf-files = ["/etc/verilyze.conf"]
assets = [
    ["target/release/vlz", "/usr/bin/", "755"],
    ["../../../verilyze.conf.example", "/etc/verilyze.conf", "644"],
    ["../../../verilyze.conf.example", "/usr/share/doc/verilyze/verilyze.conf.example", "644"],
    ["../../../man/verilyze.conf.5", "/usr/share/man/man5/", "644"],
]

[package.metadata.aur]
depends = []
